force-app/main/default/objects/GiftTransactionDesignation/GiftTransactionDesignation.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>