force-app/main/default/objects/GiftTransactionDesignation/fields/Anno_Distribuzione__c.field-meta.xml
<CustomField>
    <fullName>Anno_Distribuzione__c</fullName>
    <formula>TEXT(YEAR( Data_di_Distribuzione__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anno Distribuzione</label>
    <type>Text</type>
</CustomField>