force-app/main/default/objects/GiftTransactionDesignation/fields/Budget_Name__c.field-meta.xml
<CustomField>
    <fullName>Budget_Name__c</fullName>
    <formula>GiftDesignation.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Name</label>
    <type>Text</type>
</CustomField>