force-app/main/default/objects/GiftTransactionDesignation/fields/Data_di_Distribuzione__c.field-meta.xml
<CustomField>
    <fullName>Data_di_Distribuzione__c</fullName>
    <label>Data di Distribuzione</label>
    <type>Date</type>
</CustomField>