force-app/main/default/objects/GiftTransactionDesignation/fields/Data_di_Pagamento__c.field-meta.xml
<CustomField>
    <fullName>Data_di_Pagamento__c</fullName>
    <label>Data di Pagamento</label>
    <type>Date</type>
</CustomField>