force-app/main/default/objects/GiftTransactionDesignation/fields/Distribuzione_Shadow__c.field-meta.xml
<CustomField>
    <fullName>Distribuzione_Shadow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distribuzione Shadow</label>
    <referenceTo>Distribuzione_Shadow__c</referenceTo>
    <relationshipLabel>Donation Transactions Allocation</relationshipLabel>
    <relationshipName>Donation_Transactions_Allocation</relationshipName>
    <type>Lookup</type>
</CustomField>