force-app/main/default/objects/GiftTransactionDesignation/fields/Donation_Transaction_Name__c.field-meta.xml
<CustomField>
    <fullName>Donation_Transaction_Name__c</fullName>
    <formula>GiftTransaction.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donation Transaction Name</label>
    <type>Text</type>
</CustomField>