force-app/main/default/objects/GiftTransactionDesignation/fields/Donatore_Anno__c.field-meta.xml
<CustomField>
    <fullName>Donatore_Anno__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Donatore Anno</label>
    <referenceTo>Reporting_Year__c</referenceTo>
    <relationshipLabel>Donation Transactions Allocation (Donatore Anno)</relationshipLabel>
    <relationshipName>Donation_Transactions_Allocation</relationshipName>
    <type>Lookup</type>
</CustomField>