force-app/main/default/objects/GiftTransactionDesignation/fields/Overview_Donatore_per_Anno__c.field-meta.xml
<CustomField>
    <fullName>Overview_Donatore_per_Anno__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Overview Donatore per Anno</label>
    <referenceTo>Reporting_Year__c</referenceTo>
    <relationshipLabel>Designazioni e transazioni donazione</relationshipLabel>
    <relationshipName>Designazioni_e_transazioni_donazione</relationshipName>
    <type>Lookup</type>
</CustomField>