force-app/main/default/objects/GiftTransactionDesignation/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>Payment__c</referenceTo>
    <relationshipLabel>Donation Transactions Allocation</relationshipLabel>
    <relationshipName>Donation_Transactions_Allocation</relationshipName>
    <type>Lookup</type>
</CustomField>