force-app/main/default/objects/GiftTransactionDesignation/fields/Programma__c.field-meta.xml
<CustomField>
    <fullName>Programma__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Programma</label>
    <referenceTo>Program</referenceTo>
    <relationshipLabel>Designazioni e transazioni donazione</relationshipLabel>
    <relationshipName>Distribuzioni</relationshipName>
    <type>Lookup</type>
</CustomField>