force-app/main/default/objects/GiftTransactionDesignation/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <formula>GiftTransaction.Name &amp; &quot; - &quot; &amp; Budget_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title</label>
    <type>Text</type>
</CustomField>