force-app/main/default/objects/GiftTransactionDesignation/listViews/All_GiftTransactionDesignations.listView-meta.xml
<ListView>
    <fullName>All_GiftTransactionDesignations</fullName>
    <filterScope>Everything</filterScope>
    <label>All Gift Transaction Designations</label>
</ListView>